--- a/innovation_hub/webstore/templates/about.html
+++ b/innovation_hub/webstore/templates/about.html
@@ -1,134 +1,151 @@
 <!-- templates layout.html -->
-{% extends 'layout.html' %}
-{% block title %}About Us - Innovation Hub{% endblock %}
-
-{% block page_content %}
-    <!-- why us  -->
-    <div class="why-us">
-        <div class="container">
-            <div class="row">
-                <div class="why-transformer">
-                    <div class="why-answer">
-                        <h3>Why Our<span> Hub</span></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio debitis cumque facere amet error? Esse eum porro aspernatur neque amet voluptatem, at qui magnam? Laborum tenetur minima facilis ratione voluptatibus.</p>
-                    </div>
-                    <div class="transformer-logo">
-                        <img src="/static/img/TTIH Brand Identity 3.png" alt="">
-                    </div>
-                </div>
-            </div>
+{% extends 'layout.html' %} {% block title %}About Us - Innovation
+Hub{%endblock%} {% block page_content %}
+<!-- why us  -->
+<div class="why-us">
+  <div class="container">
+    <div class="row">
+      <div class="why-transformer">
+        <div class="why-answer">
+          <h3>Why Our<span> Hub</span></h3>
+          <p>
+            The Transformer Innovation Hub is dedicated to fostering creativity
+            and technological advancements. We provide a collaborative space
+            where innovators, entrepreneurs, and experts can connect, share
+            ideas, and work on projects that drive positive change.
+          </p>
         </div>
-    </div>
-    <!-- end-why us -->
-
-    <!-- materials-made-from -->
-    <div class="featured-category">
-        <div class="container made-from-block">
-            <div class="row">
-                <div class="featured-category-1">
-                    <div class="section-title">
-                        <h3 id="made-of-header">Made <span> From... </span> </h3>
-                        <p>The best of the best</p>
-                        <div class="shop-now"><a href="">shop now</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="category">
-                    <span>72+</span>
-                    <h3 class="made-of-text">Metal Crafts</h3>
-                </div>
-                <div class="category">
-                    <span>55+</span>
-                    <h3 class="made-of-text">Glass Arts</h3>
-                </div>
-                <div class="category">
-                    <span>25+</span>
-                    <h3 class="made-of-text">Plastics Crafts</h3>
-                </div>
-                <div class="category">
-                    <span class="made-of-text">15+</span>
-                    <h3>Wood Crafts</h3>
-                </div>
-            </div>
+        <div class="transformer-logo">
+          <img src="/static/img/TTIH Brand Identity 3.png" alt="" />
         </div>
+      </div>
     </div>
-    <!-- end-material made from -->
+  </div>
+</div>
+<!-- end-why us -->
 
-    <!-- our-team -->
-    <div class="our-team">
-        <div class="container">
-            <div class="row">
-                <div class="team-header">
-                    <div class="our-team-title">
-                        <h3>Our <span>Team</span></h3>
-                    </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ratione voluptate dolore sapiente cumque maxime ullam, tempora voluptas laborum dignissimos alias et non dolorum, nihil facere libero! Consequuntur, aperiam beatae.Nobis reprehenderit soluta at in esse vitae mollitia corrupti ratione officia deleniti facere.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="staff">
-                    <div class="staff-section">
-                        <div class="staff-img">
-                            <img src="static/img/staff/Leroy.jpeg" alt="">
-                        </div>
-                        <div class="staff-meta">
-                            <h4>Leroy Carey</h4>
-                            <h5>Founder & CEO </h5>
-                        </div>
-                    </div>
-                    <div class="staff-section">
-                        <div class="staff-img">
-                            <img src="static/img/staff/Esther.jpeg" alt="">
-                        </div>
-                        <div class="staff-meta">
-                            <h4>Esther Sessenou</h4>
-                            <h5>Project Manager</h5>
-                        </div>
-                    </div>
-                    <div class="staff-section">
-                        <div class="staff-img">
-                            <img src="static/img/staff/Aimable.jpeg" alt="">
-                        </div>
-                        <div class="staff-meta">
-                            <h4>Aimable Nkurikiyimana</h4>
-                            <h5>Full Stack Enginner</h5>
-                        </div>
-                    </div>
-                    <div class="staff-section">
-                        <div class="staff-img">
-                            <img src="static/img/staff/Henriette.jpg" alt="">
-                        </div>
-                        <div class="staff-meta">
-                            <h4>Henritte Uwimbabazi</h4>
-                            <h5>Front-end Enginner</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!-- materials-made-from -->
+<div class="featured-category">
+  <div class="container made-from-block">
+    <div class="row">
+      <div class="featured-category-1">
+        <div class="section-title">
+          <h3 id="made-of-header">Made <span> From... </span></h3>
+          <p>The best of the best</p>
+          <div class="shop-now"><a href="">shop now</a></div>
         </div>
+      </div>
     </div>
-    <!-- end our team -->
+    <div class="row">
+      <div class="category">
+        <span>72+</span>
+        <h3 class="made-of-text">Metal Crafts</h3>
+      </div>
+      <div class="category">
+        <span>55+</span>
+        <h3 class="made-of-text">Glass Arts</h3>
+      </div>
+      <div class="category">
+        <span>25+</span>
+        <h3 class="made-of-text">Plastics Crafts</h3>
+      </div>
+      <div class="category">
+        <span class="made-of-text">15+</span>
+        <h3>Wood Crafts</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end-material made from -->
 
-    <!-- testimonial -->
-    <div class="testimonial">
-        <div class="container">
-            <div class="row">
-                <div class="client-meta">
-                    <div class="client-image">
-                        <img src="/static/img/davidneza.jpeg" alt="">
-                    </div>
-                    <div class="client-data">
-                        <h4>David Neza</h4>
-                        <h5>Coach and Sustainable Development Activist</h5>
-                    </div>
-                </div>
-                <div class="testimony-quote">
-                    <p>" This is the best initiative I have ever seen, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aspernatur quasi, Lorem ipsum dolor sit amet consectetur, adipisicing elite. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, quas ducimus "</p>
-                    <div class="quote-icon"><i class="fa-solid fa-quote-right"></i></div>
-                </div>
-            </div>
+<!-- our-team -->
+<div class="our-team">
+  <div class="container">
+    <div class="row">
+      <div class="team-header">
+        <div class="our-team-title">
+          <h3>Our <span>Team</span></h3>
         </div>
+        <p>
+          Our team is a group of dedicated professionals passionate about making
+          a meaningful impact. Each member brings unique skills and expertise,
+          ranging from technology and design to business strategy and project
+          management. Together, we work towards innovative solutions that
+          empower communities and foster growth. With a collaborative spirit and
+          a focus on excellence, we are committed to turning ideas into reality
+          and pushing the boundaries of what’s possible.
+        </p>
+      </div>
     </div>
-    <!-- end testimonial -->
+    <div class="row">
+      <div class="staff">
+        <div class="staff-section">
+          <div class="staff-img">
+            <img src="static/img/staff/Leroy.jpeg" alt="" />
+          </div>
+          <div class="staff-meta">
+            <h4>Leroy Carey</h4>
+            <h5>Founder & CEO</h5>
+          </div>
+        </div>
+        <div class="staff-section">
+          <div class="staff-img">
+            <img src="static/img/staff/Esther.jpeg" alt="" />
+          </div>
+          <div class="staff-meta">
+            <h4>Esther Sessenou</h4>
+            <h5>Project Manager</h5>
+          </div>
+        </div>
+        <div class="staff-section">
+          <div class="staff-img">
+            <img src="static/img/staff/Aimable.jpeg" alt="" />
+          </div>
+          <div class="staff-meta">
+            <h4>Aimable Nkurikiyimana</h4>
+            <h5>Full Stack Enginner</h5>
+          </div>
+        </div>
+        <div class="staff-section">
+          <div class="staff-img">
+            <img src="static/img/staff/Henriette.jpg" alt="" />
+          </div>
+          <div class="staff-meta">
+            <h4>Henritte Uwimbabazi</h4>
+            <h5>Front-end Enginner</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end our team -->
+
+<!-- testimonial -->
+<div class="testimonial">
+  <div class="container">
+    <div class="row">
+      <div class="client-meta">
+        <div class="client-image">
+          <img src="/static/img/davidneza.jpeg" alt="" />
+        </div>
+        <div class="client-data">
+          <h4>David Neza</h4>
+          <h5>Coach and Sustainable Development Activist</h5>
+        </div>
+      </div>
+      <div class="testimony-quote">
+        <p>
+          " This is one of the best initiative I have seen. It is truly
+          inspiring to witness how such projects can bring meaningful change to
+          communities. I am excited to see how this hub will continue to grow
+          and impact even more lives in the future. The dedication and passion
+          behind it are evident in every step they take "
+        </p>
+        <div class="quote-icon"><i class="fa-solid fa-quote-right"></i></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end testimonial -->
 {% endblock %}
