--- a/innovation_hub/webstore/static/styles/login.css
+++ b/innovation_hub/webstore/static/styles/login.css
@@ -5,7 +5,6 @@
 main {
     display: flex;
     justify-content: center;
-    height: 800px;
     align-items: center;
     flex-direction: column;
     margin-top: 10px;
@@ -32,6 +31,7 @@ img {
     border-radius: 8px;
     border: 1px solid rgb(196, 189, 177);
     box-shadow: 0px 4px 12px rgba(42, 93, 171, 0.5);
+    padding: 50px 10px;
 }
 .sign-in {
     text-align: center;
@@ -100,4 +100,15 @@ a span {
     color: whitesmoke;
     font-size: 17px;
     margin-top: 25px;
+}
+
+
+/* footer */
+footer {
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 25px;
+    border-top: 1px solid gray;
 }
