--- a/innovation_hub/webstore/templates/header.html
+++ b/innovation_hub/webstore/templates/header.html
@@ -15,21 +15,35 @@
 						<nav class="main-menu">
 							<ul class="nav-link">
                                 <li><a href="{% url 'webstore:home' %}">Home</a></li>
-								<li><a href="{% url 'webstore:about' %}">About</a></li>
 								<li><a href="{% url 'webstore:shop' %}">Shop</a></li>
-								<li><a href="#blog">Blog</a></li>
+								<li><a href="{% url 'webstore:about' %}">About</a></li>
 								<li><a href="{% url 'webstore:contact' %}">Contact</a></li>
+								<li><a href="#blog">Blog</a></li>
 							</ul>
                             <ul class="nav-icon">
                                 <li class="icons">
 									<div class="header-icons">
 										<a class="shopping-cart" href="{% url 'webstore:cart' %}"><i class="fas fa-shopping-cart"></i></a>
 										<a class="search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+										{% if user.is_authenticated %}
+                                        	<a href="{% url 'webstore:logout_user' %}"><i class="fas fa-sign-out-alt"></i></a>
+										{% else %}
+											<a href="{% url 'webstore:login_user' %}"><i class="fas fa-sign-in-alt"></i></a>
+											<a class="shopping-cart" href="{% url 'webstore:register_user' %}"><i class="fa fa-user-plus"></i></a>
+										{% endif %}
 									</div>
 								</li>
                             </ul>
 						</nav>
 						<!-- menu end -->
+						 {% if messages %}
+						 	{% for message in messages %}
+								<div class="alert alert-warning alert-dismissible fade show" role="alert">
+									{{ message }}
+									<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+								</div>
+							{% endfor %}
+						{% endif %}
 					</div>
 				</div>
 			</div>
