--- a/innovation_hub/webstore/templates/login.html
+++ b/innovation_hub/webstore/templates/login.html
@@ -1,21 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
-    <link rel="stylesheet" href="/static/styles/sign-in.css">
-    <link rel="stylesheet" href="/static/styles/sign-in-footer.css">
+    <link rel="stylesheet" href="/static/styles/login.css">
     <link rel="stylesheet" href="/static/styles/main.css">
     <link rel="stylesheet" href="static/styles/all.css">
     <link rel="stylesheet" href="static/styles/home.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header>
-
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert"
+            style="width: 50%; position: absolute; top: 40px; left: 50%; transform: translateX(-50%);">
+           <strong>{{ message }}</strong> You should check in on some of those fields below.
+           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        {% endif %}
     </header>
     <main class="overlay">
         <div class="logo">
@@ -24,9 +34,10 @@
         <div class="sign-in-block">
             <div class="sign-in">
                 <h1>Sign in </h1>
-                sign-in to continue
+                Sign-in to continue shopping
             </div>
-            <form action="" class="form">
+            <form action="{% url 'webstore:login_user' %}" class="form" method="POST">
+                {% csrf_token %}
                 <label for="">Username</label><br>
                 <input type="text" name="username" id="username" placeholder="Username"><br>
                 <label for="">Password</label><br>
@@ -35,8 +46,8 @@
             </form>
         </div>
         <div class="links">
-            <a href="#">Forgot Password?</a> |
-            <a href="#">Don't have an account? <span>Sign up</span></a>
+            <a href="#">Forgot Password ?</a> |
+            <a href="{% url 'webstore:register_user' %}">Don't have an account? <span> Register</span></a>
         </div>
     </main>
     <footer>
