--- a/innovation_hub/webstore/templates/about.html
+++ b/innovation_hub/webstore/templates/about.html
@@ -1,6 +1,11 @@
 <!-- templates layout.html -->
-{% extends 'layout.html' %} {% block title %}About Us - Innovation
-Hub{%endblock%} {% block page_content %}
+{% extends 'layout.html' %}
+{% block title %} About Us - Innovation {% endblock %}
+{% block page_head %}
+    <p class="subtitle">WE SALE RECYCLED CRAFTS</p>
+    <h1>About</h1>
+{% endblock %}
+{% block page_content %}
 <!-- why us  -->
 <div class="why-us">
   <div class="container">
