--- a/innovation_hub/webstore/templates/contact.html
+++ b/innovation_hub/webstore/templates/contact.html
@@ -1,6 +1,14 @@
 <!-- templates layout.html -->
-{% extends 'layout.html' %} {% block title %} Contact -Innovation
-Hub{%endblock%} {% block page_content %}
+{% extends 'layout.html' %}
+{% block title %} Contact -Innovation
+Hub
+{%endblock%}
+{% block page_head %}
+    <p class="subtitle">REMADE TO LOOK CLEAN</p>
+    <h1>Contact</h1>
+{% endblock %}
+{% block page_content %}
+
 <!-- extends from other pages -->
 <div class="contact-section">
   <div class="container">
