--- a/innovation_hub/webstore/templates/layout.html
+++ b/innovation_hub/webstore/templates/layout.html
@@ -30,8 +30,10 @@
                 <div class="text-container">
                     <div class="hero-text">
                         <div class="hero-text-tablecell">
-                            <p class="subtitle">SUBTITLE</p>
-                            <h1>Page</h1>
+                            <!-- <p class="subtitle">SUBTITLE</p>
+                            <h1>Page</h1> -->
+                            {% block page_head %}
+                            {% endblock %}
                         </div>
                     </div>
                 </div>
