--- a/innovation_hub/webstore/templates/shop.html
+++ b/innovation_hub/webstore/templates/shop.html
@@ -1,5 +1,9 @@
 <!-- templates layout.html -->
 {% extends 'layout.html' %} {% block title %}Shop - Innovation Hub{% endblock %}
+{% block page_head %}
+    <p class="subtitle">REMADE TO LOOK CLEAN</p>
+    <h1>Shop</h1>
+{% endblock %}
 {% block page_content %}
 <div class="search-filters">
   <div class="container">
