--- a/innovation_hub/webstore/templates/cart.html
+++ b/innovation_hub/webstore/templates/cart.html
@@ -1,7 +1,10 @@
 <!-- templates layout.html -->
 {% extends 'layout.html' %}
 {% block title %} Cart - Innovation Hub {% endblock %}
-
+{% block page_head %}
+    <p class="subtitle">REMADE TO LOOK CLEAN</p>
+    <h1>Cart</h1>
+{% endblock %}
 {% block page_content %}
     <!-- extends from the other pages (header - footer) -->
     <div class="cart-section">
