--- a/innovation_hub/webstore/templates/shop.html
+++ b/innovation_hub/webstore/templates/shop.html
@@ -1,7 +1,7 @@
 <!-- templates layout.html -->
 {% extends 'layout.html' %} {% block title %}Shop - Innovation Hub{% endblock %}
 {% block page_head %}
-    <p class="subtitle">REMADE TO LOOK CLEAN</p>
+    <p class="subtitle">FASHIONED INTO A NEW LOOK</p>
     <h1>Shop</h1>
 {% endblock %}
 {% block page_content %}
