--- a/innovation_hub/webstore/templates/single-product.html
+++ b/innovation_hub/webstore/templates/single-product.html
@@ -8,6 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="product-details">
+                    {{ for  }}
                     <div class="single-product-img">
                         <img src="/static/img/products/art-necklace.webp" alt="">
                     </div>
